assets/css/landing.css
:root {
    colorPrimary: #fff;
    colorPrimaryDark: #000;
    colorSecondaryBlue: #0401FF;
    colorSecondarySkyblue: #61D8DE;
}

@keyframes bounce {
    0% {
        transform: none;
    }
    50% {
        transform: scale(1.2);
    }
    100% {
        transform: none;
    }
}

/*general classes, repetitive*/
.main-action-button {
    border-radius: 100rem;
    background-color: #F0F0F0;
    padding: 0.5rem 1rem 0.5rem 2rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 4rem;
}
.main-action-button span {
    color: #000;
    font-size: 1.4rem;
    font-weight: 400;
    text-transform: uppercase;
}
.main-action-button img {
    aspect-ratio: 1/1;
    width: 3rem;
    height: auto;
}


/*header and hero section*/
header {
    position: relative;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
.header-background {
    position: absolute;
    top: 50%;
    left: -3rem;
    transform: translateY(-50%);
    width: 50vw;
}
.main-navbar {
    height: 7rem;
    width: 100%;
    padding: 0 5vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}
.main-navbar > a > img {
    height: 3rem;
    width: auto;
    transition: all 0.3s;
}
.main-navbar > a > img:hover {
    cursor: pointer;
    transform: scale(1.05);
}
.main-navbar-links {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 3vw;
    list-style: none;
}
.navbar-link a {
    display: inline-block;
    color: #000;
    font-size: 1.2rem;
    font-weight: 400;
    text-align: center;
    transition: all 0.3s;
}
.navbar-link a:hover {
    cursor: pointer;
    transform: translateY(-0.2rem);
    opacity: 0.8;
}
.main-navbar-button {
    padding: 0.8rem 2.5rem;
    border-radius: 1rem;
    background-color: #0401FF;
    transition: all 0.3s;
}
.main-navbar-button:hover {
    cursor: pointer;
    opacity: 0.7;
}
.main-navbar-button a {
    color: #FFF;
    font-size: 1.2rem;
    font-weight: 400;
    text-align: center;
}

/*mobile navbar elements*/
.navbar-burger {
    width: 3rem;
    display: none;
    flex-direction: column;
    align-items: flex-end;
    gap: 0.6rem;
    transition: all 0.3s;
}
.burger-line {
    position: relative;
    z-index: 5;
    background-color: #0401FF;
    width: 100%;
    height: 0.2rem;
}
.burger-line:nth-child(2) {
    width: 50%;
}
.burger-line:nth-child(3) {
    width: 80%;
}
.mobile-main-navbar-overlay {
    position: absolute;
    z-index: 5;
    left: 0;
    top: 0;
    display: none;
    width: 100%;
    height: 100vh;
    height: 100dvh;
    transition: all 0.3s;
}
.mobile-main-navbar-overlay.active {
    display: flex;
}
.mobile-main-navbar-overlay.visible {
    background-color: rgba(0, 0, 0, 0.3);
    backdrop-filter: blur(0.4rem);
}
.mobile-main-navbar{
    padding: 1.5rem 5vw 4rem 1.5rem;
    transform: translateX(80vw);
    width: 60vw;
    height: 100vh;
    height: 100dvh;
    background-color: #fff;
    position: absolute;
    right: 0;
    top: 0;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 5rem;
    transition: all 0.5s;
}
.mobile-main-navbar-overlay.visible .mobile-main-navbar {
    transform: none;
}

.close-mobile-menu {
    position: relative;
    width: 3.5rem;
    height: 3.5rem;
}
.close-menu-line {
    width: 1rem;
    height: 0.3rem;
    background-color: #0401FF;
    position: absolute;
    top: 50%;
    left: 50%;
}
.mobile-main-navbar-overlay.active .close-menu-line {
    width: 3rem;
}
.close-menu-line:nth-child(1) {
    transform: translate(-50%, -50%) rotate(45deg);
}
.close-menu-line:nth-child(2) {
    transform: translate(-50%, -50%) rotate(-45deg);
}

.mobile-navbar-links {
    list-style: none;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 2.5rem;
}
.mobile-navbar-links a {
    display: inline-block;
    color: #000;
    text-transform: uppercase;
    text-decoration: none;
    font-family: 'Nexa';
    font-size: 1.4rem;
    transition: all 0.3s;
}
.mobile-navbar-links a:hover {
    opacity: 0.8;
    transform: translateX(-0.5rem);
}
.mobile-navbar-button {
    margin-top: 2rem;
}
.mobile-navbar-button a {
    color: #0401FF;
}
.mobile-navbar-button a:hover {
    opacity: 0.7;
}
@media only screen and (max-width: 550px) {
    .navbar-burger {
        display: flex;
    }
    .main-navbar-links {
        display: none;
    }
}

/*hero section styling*/
.hero-section {
    min-height: calc(100vh - 7rem);
    padding: 4rem 5vw;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 5vw;
}
.hero-content {
    position: relative;
    z-index: 2;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 7rem;
}
.hero-content-text {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
.hero-content-text h1 {
    color: #000;
    font-family: "Nexa";
    font-size: 3rem;
    font-weight: 900;
}
.hero-content-text h2 {
    color: #0401FF;
    font-family: "Nexa";
    font-size: 10rem;
    font-weight: 900;
    text-decoration-line: underline;
    text-underline-offset: 1rem;
}
.hero-content-text p {
    margin-top: 2rem;
    color: #484848;
    font-size: 1.6rem;
    font-weight: 400;
    line-height: 150%; 
}
.hero-content-text p strong {
    color: #0401FF;
}

.hero-graphics {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}
.hero-graphics img {
    width: 80%;
    height: auto;
    box-shadow: 0px 0px 50px 30px #FFF inset;
}

@media only screen and (max-width: 1000px) {
    .hero-graphics {
        display: none;
    }
    .header-background {
        width: 95vw;
    }
}
@media only screen and (max-width: 800px) {
    .hero-content-text h2 {
        font-size: 8rem;
    }
}
@media only screen and (max-width: 600px) {
    .header-background {
        width: 120vw;
    }
}
@media only screen and (max-width: 450px) {
    .hero-content-text h1 {
        font-size: 8vw;
    }
    .hero-content-text h2 {
        font-size: 18vw;
    }
    .hero-content-text p {
        font-size: 1.4rem;
    }
}

